#[[bin]]
#name = "master"
#path = "src/bin/master.rs"
#
#[[bin]]
#name = "secondary"
#path = "src/bin/secondary.rs"

[package]
name = "replicated-log-ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
log = "0.4.17"
env_logger = "0.9.1"