[package]
name = "replicated-log-ds"
version = "0.1.0"
edition = "2021"

# [workspace]
# members=['rlog/rlog.rs', 'bin/master.rs', 'bin/secondary.rs']


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
actix-rt = "2.7.0"
tokio = "1.21.2"
rand = "0.8.4"
actix-web = "4"
actix = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
log = "0.4.17"
env_logger = "0.9.1"